--- a/game-style.css
+++ b/game-style.css
@@ -1,4 +1,5 @@
 
+/* Section */
 
 .situation{
     display: none;
@@ -6,4 +7,14 @@
 
 .consequence{
     display: none;
+}
+
+/* Style bien - mal */
+
+.good-choice{
+    background-color: green;
+}
+
+.bad-choice{
+    background-color: red;
 }
