--- a/api.css
+++ b/api.css
@@ -8,7 +8,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: white;
+    background-color: black;
     margin: 0;
 }
 
@@ -21,6 +21,7 @@ h1,p {
 
 p {
     padding: 15px;
+    line-height: 1.6;
 }
 
 .loader{
@@ -40,6 +41,7 @@ p {
     position: absolute;
     margin-left: 15px;
     z-index: 2;
+    margin-bottom: 20px;
 }
 
 .vagues {
@@ -60,7 +62,7 @@ p {
 
 .continuite{
     width: 100%;
-    height: 500px;
+    height: 50px;
     background-color: #023554;
 }
 
