--- a/game-style.css
+++ b/game-style.css
@@ -1,3 +1,15 @@
+body{
+height: 100vh;
+width: 100vw;
+    background-image: url(images/fond-game-desktop.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 /* Section */
 
@@ -9,20 +21,18 @@
     display: none;
 }
 
-/* Style bien - mal */
-
 .good-choice{
-    background-color: green;
+    filter: brightness(0.5);
 }
-
 .bad-choice{
-    background-color: red;
+    filter: brightness(0.5);
 }
 
 
 /* Stylisation de la sirène */
 
-g:hover{
+
+g.sirene-button:hover{
     cursor: pointer;
     filter: brightness(1.5);
 }
@@ -39,6 +49,4 @@ font-family: 'titre';
   text-align: center;
   margin: 0;
   padding: 0;
-  position: relative;
-  bottom: 100px;
 }
