--- a/styles.css
+++ b/styles.css
@@ -36,13 +36,13 @@ body {
 header {
   position: fixed;
   top: 0;
-  left: 0; 
-  right: 0; 
+  left: 0;
+  right: 0;
   padding: 2rem;
   margin: 0 auto;
-  display: flex; 
-  justify-content: center; 
-  align-items: center; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
   z-index: 10;
 }
 
@@ -52,19 +52,19 @@ nav ul {
   justify-content: center;
   list-style-type: none;
   margin: 0;
-  padding: 0; 
+  padding: 0;
   background-color: transparent;
 }
 
 
-.bgNav{
+.bgNav {
   display: flex;
   background-color: transparent;
   border-radius: 50px;
   border: #00263d solid 3px;
 }
 
-nav a{
+nav a {
   font-size: 3vh;
   text-decoration: none;
   padding: 1vh;
@@ -72,28 +72,28 @@ nav a{
 }
 
 
-nav img{
+nav img {
   width: 5vh;
-  margin:1vh ;
+  margin: 1vh;
 }
 
-.active{
+.active {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color:var(--color1);
+  background-color: var(--color1);
   border-radius: 30px;
   color: var(--color3);
 
 }
 
-.deepBlue{
-  color:var(--color2);
+.deepBlue {
+  color: var(--color2);
   padding-left: 2vh;
   padding-right: 2vh;
 }
 
-.blue{
+.blue {
   color: var(--color1);
 }
 
@@ -107,8 +107,10 @@ nav img{
   border-radius: 30px;
   padding-left: 1vh;
   padding-right: 1vh;
-  transform: scale(1); /* État initial sans mise en avant */
+  transform: scale(1);
+  /* État initial sans mise en avant */
 }
+
 /* ---------------------------------NAV FIN-------------------------------- */
 
 
@@ -130,14 +132,14 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: 
-  url(images/vague3.svg), 
-  url(images/vague2.svg),
-  url(images/épave.svg),
-  url(images/rayons.svg);
+  background-image:
+    url(images/vague3.svg),
+    url(images/vague2.svg),
+    url(images/épave.svg),
+    url(images/rayons.svg);
   background-repeat: no-repeat;
   background-size: contain, contain, contain;
-  background-position: 0% 100%,  0% 100%, 0% 95%, 50% 0%; 
+  background-position: 0% 100%, 0% 100%, 0% 95%, 50% 0%;
   margin: 0;
   padding: 0;
   background-color: #7ddeea;
@@ -152,25 +154,29 @@ section {
   padding: 0;
   position: relative;
   bottom: 100px;
-  animation: wiggle 1s ease-out forwards infinite alternate-reverse; 
+  animation: wiggle 1s ease-out forwards infinite alternate-reverse;
 }
 
 
 @keyframes wiggle {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
+
   25% {
-      transform: rotate(2deg);
+    transform: rotate(2deg);
   }
+
   50% {
-      transform: rotate(-2deg);
+    transform: rotate(-2deg);
   }
+
   75% {
-      transform: rotate(1deg);
+    transform: rotate(1deg);
   }
+
   100% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
 }
 
@@ -180,18 +186,22 @@ section {
     opacity: 0;
     transform: scale(0.5) translateY(-100px) rotate(-20deg);
   }
+
   25% {
     opacity: 0.3;
     transform: scale(1.2) translateY(20px) rotate(10deg);
   }
+
   50% {
     opacity: 0.6;
     transform: scale(0.9) translateY(-10px) rotate(-5deg);
   }
+
   75% {
     opacity: 0.9;
     transform: scale(1.05) translateY(5px) rotate(2deg);
   }
+
   100% {
     opacity: 1;
     transform: scale(1) translateY(0) rotate(0deg);
@@ -224,10 +234,11 @@ section {
   bottom: 30%;
 }
 
-.bulles, .bulles2 {
+.bulles,
+.bulles2 {
   position: absolute;
-  animation: float 10s infinite ease-in-out; 
-  opacity: 0.8; 
+  animation: float 10s infinite ease-in-out;
+  opacity: 0.8;
 }
 
 
@@ -235,15 +246,19 @@ section {
   0% {
     transform: translate(0, 0) rotate(0deg);
   }
+
   25% {
     transform: translate(-20px, -30px) rotate(15deg);
   }
+
   50% {
     transform: translate(30px, 10px) rotate(-10deg);
   }
+
   75% {
     transform: translate(-10px, 20px) rotate(5deg);
   }
+
   100% {
     transform: translate(0, 0) rotate(0deg);
   }
@@ -296,7 +311,7 @@ section {
 
 .activites {
   background-image: url(images/fonds.svg),
-  url(images/fonds2.svg);
+    url(images/fonds2.svg);
   background-repeat: no-repeat;
   background-size: contain, 100%;
   background-color: #00263d;
@@ -343,8 +358,8 @@ section {
 }
 
 .activites .share p {
-    text-align: right;
-    margin-left: auto;
+  text-align: right;
+  margin-left: auto;
 }
 
 
@@ -405,7 +420,7 @@ section {
   color: #fff;
 }
 
-.apropos .container{
+.apropos .container {
   max-width: 400px;
   display: flex;
   justify-content: center;
@@ -435,7 +450,8 @@ section {
 }
 
 
-.api h1,.api p {
+.api h1,
+.api p {
   background-color: var(--color1);
   color: white;
   text-align: center;
@@ -447,7 +463,7 @@ section {
   line-height: 1.6;
 }
 
-.api .ocean{
+.api .ocean {
   position: relative;
   height: 100px;
   width: 100%;
@@ -466,7 +482,7 @@ section {
   background-color: transparent;
 }
 
-.api .vague{
+.api .vague {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -476,27 +492,27 @@ section {
   background-size: 1500px 300px;
 }
 
-.api .continuite{
+.api .continuite {
   width: 100%;
   height: 50px;
   background-color: var(--color1);
 }
 
-.api #vague1{
+.api #vague1 {
   bottom: 0px;
   opacity: 1;
   z-index: 5;
   animation: wave 5.5s infinite ease-in-out;
 }
 
-.api #vague2{
+.api #vague2 {
   bottom: 10px;
   opacity: 0.5;
   z-index: 4;
   animation: wave-inversed 3s infinite ease-in-out;
 }
 
-.api #vague3{
+.api #vague3 {
   bottom: 15px;
   opacity: 0.7;
   z-index: 3;
@@ -504,30 +520,34 @@ section {
 }
 
 
-@keyframes wave{
+@keyframes wave {
   0% {
-      background-position-x: 1500px;
-      transform: rotateY('100px');
+    background-position-x: 1500px;
+    transform: rotateY('100px');
   }
+
   50% {
-      transform: rotateY('0px');
+    transform: rotateY('0px');
   }
+
   100% {
-      background-position-x: 0px;
-      transform: rotateY('100px');
+    background-position-x: 0px;
+    transform: rotateY('100px');
   }
 }
 
-@keyframes wave-inversed{
+@keyframes wave-inversed {
   0% {
-      background-position-x: 0px;
-      transform: rotateY('100px');
+    background-position-x: 0px;
+    transform: rotateY('100px');
   }
+
   50% {
-      transform: rotateY('0px');
+    transform: rotateY('0px');
   }
+
   100% {
-      background-position-x: 1500px;
-      transform: rotateY('100px');
+    background-position-x: 1500px;
+    transform: rotateY('100px');
   }
 }
