--- a/game-style.css
+++ b/game-style.css
@@ -47,6 +47,6 @@ font-family: 'titre';
   font-size: 3rem;
   color: white;
   text-align: center;
-  margin: 0;
+  margin-top: 120px;
   padding: 0;
 }
