--- a/game-style.css
+++ b/game-style.css
@@ -1,6 +1,6 @@
-body{
-height: 100vh;
-width: 100vw;
+body {
+    height: 100vh;
+    width: 100vw;
     background-image: url(images/fond-game-desktop.svg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -13,18 +13,27 @@ width: 100vw;
 
 /* Section */
 
-.situation{
+.situation {
     display: none;
 }
 
-.consequence{
+.consequence {
+    display: none;
+    max-width: 580px;
+    margin: 0 auto;
+    padding: 24px;
+    border-radius: 16px;
+}
+
+.consequence img {
     display: none;
 }
 
-.good-choice{
+.good-choice {
     filter: brightness(0.5);
 }
-.bad-choice{
+
+.bad-choice {
     filter: brightness(0.5);
 }
 
@@ -32,21 +41,47 @@ width: 100vw;
 /* Stylisation de la sirène */
 
 
-g.sirene-button:hover{
+g.sirene-button:hover {
     cursor: pointer;
     filter: brightness(1.5);
 }
+
 @font-face {
     font-family: 'titre';
     src: url(polices/Super\ Ocean\ Personal\ Use.woff),
-      url(polices/Super\ Ocean\ Personal\ Use.woff2);
-  }
+        url(polices/Super\ Ocean\ Personal\ Use.woff2);
+}
 
-h1{
-font-family: 'titre';
-  font-size: 3rem;
-  color: white;
-  text-align: center;
-  margin-top: 120px;
-  padding: 0;
+h1 {
+    font-family: 'titre';
+    font-size: 3rem;
+    color: white;
+    text-align: center;
+    margin-top: 120px;
+    padding: 0;
+}
+
+
+/* Buttons */
+
+.choice button {
+    background-color: #00263d;
+    color: white;
+}
+
+.choice button:hover {
+
+    cursor: pointer;
+    filter: brightness(1.5);
+    color: white;
+    border: 2px solid white;
+}
+
+
+.result {
+    position: relative;
+    bottom: 100px;
+    background-color: #00263d;
+    color: white;
+    padding: 24px;
 }
