--- a/styles.css
+++ b/styles.css
@@ -320,6 +320,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 2rem;
   margin-bottom: 2rem;
 }
 
